
[package]
name = "berry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"
criterion = {version="0.3",features=["html_reports"]}

[[bench]]
name = "my_benchmark"
harness = false
